--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <div class="questions">
     <h2>Let's start with your Name</h2>
     <input id="name" placeholder="Enter Your Name Here">
-    <h2> Would you rather spend the day reading, coding, playing a sport or designing clothing?</h2>
-    <input id="question1" placeholder="Reading, Coding, Sports, Designing">
-    <h2> Which would you rather disappear from earh forever: Waffles, Pancakes, or French Toast?</h2>
+    <h2> Would you rather spend the day at a museum, at the mall, at a theatre, or at kareoke night?</h2>
+    <input id="question1" placeholder="museum, mall, home, kareoke ">
+    <h2> ?</h2>
     <input id="question2" placeholder="Pancakes, Waffles, or French Toast">
-    <h2>What is your favorite animal?</h2>
-    <input id="question3" placeholder="Mine is a Duck">
+    <h2>Which animal would you have as your pet, a monkey, a cat, a dog, or a duck and a chicken?</h2>
+    <input id="question3" placeholder="monkey, cat, dog, a duck and a chicken">
   </div>
   <div class="result">
     <button>Click here to land your dream job!</button>
