--- a/News.html
+++ b/News.html
@@ -4,11 +4,11 @@
     </head>
     <body>
  <div>
-                 
+            <a href="index.html">About Me</a>
              <a href="quiz.html">About Me</a>
              <a href="News.html">Portfolio</a>
              <a href="video.html">Contact</a>
-<link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
 
             
              </div>
