--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+  <div>
+    
+            <a href="index.html">Home</a>
+             <a href="quiz.html">Quizes</a>
+             <a href="News.html">News</a>
+             <a href="video.html">videos</a>
+        <link rel="stylesheet" href="style.css">
+
+      
+</div>
   <div class="header">
     <div><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e4/BuzzFeed.svg/1280px-BuzzFeed.svg.png"></div>
     <div>News</div>
@@ -26,17 +36,18 @@
     <h2>Let's start with your Name</h2>
     <input id="name" placeholder="Enter Your Name Here">
     <h2> Would you rather spend the day at a museum, at the mall, at a theatre, or doing karaoke ?</h2>
-    <input id="question1" placeholder="museum, mall, home, karaoke ">
-    <h2>Would you rather eat something vegetarian,a meatball sub , cheesecake,or a left over Thanksgiving sandwich? ?</h2>
-    <input id="question2" placeholder="something vegetarian, meatball sub , cheesecake, left over Thanksgiving sandwich ">
+    <input id="question1" placeholder="Enter Your Answer Here">
+    <h2>Would you rather eat something vegetarian, a meatball sub , cheesecake,or a left over Thanksgiving sandwich?</h2>
+    <input id="question2" placeholder="Enter Your Answer Here">
     <h2>Which animal would you have as your pet, a monkey, a cat, a dog, or a duck and a chicken?</h2>
-    <input id="question3" placeholder="monkey, cat, dog,or a chicken">
+    <input id="question3" placeholder="Enter Your Answer Here">
   </div>
   <div class="result">
     <button>Click here to land your Friends character!</button>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src='js/script.js'></script>
+  
 </body>
 
 </html>
