--- a/quiz.html
+++ b/quiz.html
@@ -7,8 +7,19 @@
 </head>
 
 <body>
+  <div>
+   
+            <a href="index.html">About Me</a>
+             <a href="quiz.html">About Me</a>
+             <a href="News.html">Portfolio</a>
+             <a href="video.html">Contact</a>
+        <link rel="stylesheet" href="style.css">
+
+          
+    </body>
+</html>
 </div>
-  <h1>Which Tech Company is the Perfect Fit for You?</h1>
+  <h1>Which Friends character are You?</h1>
   <p id="caption">With dedication, you'll be there before you know it. </p>
   <img id="tomImg" src="http://th.downloadblog.it/jSwEBLI80OIF2oYywP73GVj3zCo=/fit-in/655xorig/http%3A%2F%2Fmedia.downloadblog.it%2F5%2F57d%2Ftom-di-myspace.jpg">
   <a href="https://en.wikipedia.org/wiki/Tom_Anderson">Tom Anderson</a>
